k3s/apps/argocd/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`argocd.zcorp.ovh`)
    kind: Rule
    priority: 10
    services:
    - name: argocd-server
      port: 80
  - match: Host(`argocd.zcorp.ovh`) && Headers(`Content-Type`, `application/grpc`)
    kind: Rule
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
  tls:
    certResolver: letsencrypt-prod
