k3s/apps/argocd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-ui
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
  - secretName: argo-tls-secret
    hosts:
    - argocd.zcorp.ovh
  rules:
  - host: argocd.zcorp.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: http
